Adding Missing Reference Benchmarks
- Added Dotproduct Benchmarks (BFV & CKKS, Latency & Offline)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,10 @@ set(${PROJECT_NAME}_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/src/benchmarks/bfv/palisade_bfv_matmultval_benchmark.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/benchmarks/bfv/palisade_bfv_matmult_cipherbatchaxis_benchmark.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/benchmarks/bfv/palisade_bfv_matmultrow_benchmark.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/benchmarks/bfv/palisade_bfv_dot_product_benchmark.cpp"
+    #"${CMAKE_CURRENT_SOURCE_DIR}/src/benchmarks/bfv/palisade_bfv_element_wise_benchmark.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/benchmarks/ckks/palisade_ckks_dot_product_benchmark.cpp"
+    #"${CMAKE_CURRENT_SOURCE_DIR}/src/benchmarks/ckks/palisade_ckks_element_wise_benchmark.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/benchmarks/ckks/palisade_ckks_eltwiseadd_pc_benchmark.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/benchmarks/ckks/palisade_ckks_matmulteip_benchmark.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/benchmarks/ckks/palisade_ckks_matmultval_benchmark.cpp"
@@ -110,6 +114,10 @@ set(${PROJECT_NAME}_HEADERS
     "${CMAKE_CURRENT_SOURCE_DIR}/include/benchmarks/bfv/palisade_bfv_matmultval_benchmark.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/include/benchmarks/bfv/palisade_bfv_matmult_cipherbatchaxis_benchmark.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/include/benchmarks/bfv/palisade_bfv_matmultrow_benchmark.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/include/benchmarks/bfv/palisade_bfv_dot_product_benchmark.h"
+    #"${CMAKE_CURRENT_SOURCE_DIR}/include/benchmarks/bfv/palisade_bfv_element_wise_benchmark.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/include/benchmarks/ckks/palisade_ckks_dot_product_benchmark.h"
+    #"${CMAKE_CURRENT_SOURCE_DIR}/include/benchmarks/ckks/palisade_ckks_element_wise_benchmark.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/include/benchmarks/ckks/palisade_ckks_eltwiseadd_pc_benchmark.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/include/benchmarks/ckks/palisade_ckks_matmulteip_benchmark.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/include/benchmarks/ckks/palisade_ckks_matmultval_benchmark.h"
